--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -2,6 +2,9 @@
 # Profile: docker
 # =========================
 
+# Server Configuration
+server.port=8081
+
 # MySQL running on HOST (Mac) but accessed from inside container
 spring.datasource.url=jdbc:mysql://host.docker.internal:3306/postcomments?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
