--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,14 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
       - master
-      - -develop-1
-  pull_request:
-    branches:
-      - main
-      - master
-      - develop-1
   release:
     types: [created]
   workflow_dispatch:
@@ -63,8 +56,8 @@ jobs:
             type=ref,event=pr
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/postandcomments' || github.ref == 'refs/heads/master' }}
+            type=sha,prefix=sha-
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
 
       - name: Build Docker image
         uses: docker/build-push-action@v5
