--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,16 +9,18 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_IMAGE_NAME: post-comments-app
+  APP_NAME: post-comments-app
   DOCKER_HUB_REPOSITORY: ${{ secrets.DOCKERHUB_USERNAME }}/post-comments-app
+  ECR_REGION: us-east-1                    # <-- change to your AWS region
+  ECR_REPOSITORY: post-comments-app        # <-- change to your ECR repo name
 
 jobs:
-  # Job 1: Build and Register Docker Image in Docker Hub
-  build-and-register-docker:
-    name: Build and Register Docker Image in Docker Hub
+  # ============================
+  # Job 1: Build & Test (no Docker)
+  # ============================
+  build:
+    name: Build & Test
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
 
     steps:
       - name: Checkout code
@@ -32,10 +34,29 @@ jobs:
           cache: maven
 
       - name: Run tests
-        run: mvn clean test
+        run: mvn -B clean test
 
-      - name: Build application
-        run: mvn clean package -DskipTests
+      - name: Build jar
+        run: mvn -B clean package -DskipTests
+
+      - name: Upload jar artifact (optional)
+        uses: actions/upload-artifact@v4
+        with:
+          name: application-jar
+          path: target/*.jar
+          retention-days: 7
+
+  # ============================
+  # Job 2: Build & Push to Docker Hub
+  # ============================
+  dockerhub:
+    name: Build & Push Docker Image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -53,13 +74,10 @@ jobs:
           images: ${{ env.DOCKER_HUB_REPOSITORY }}
           tags: |
             type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
             type=sha,prefix=sha-
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
 
-      - name: Build Docker image
+      - name: Build & push image to Docker Hub
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -71,96 +89,36 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-      - name: Image build summary
-        run: |
-          echo "✅ Docker image built and pushed to Docker Hub successfully!"
-          echo "Image: ${{ env.DOCKER_HUB_REPOSITORY }}"
-          echo "Tags: ${{ steps.dockerhub-meta.outputs.tags }}"
-
-  # Job 2: CI/CD Pipeline Execution
-  cicd-pipeline:
-    name: CI/CD Pipeline Execution
+  # ============================
+  # Job 3: Push image to Amazon ECR
+  # ============================
+  ecr:
+    name: Push Docker Image to Amazon ECR
     runs-on: ubuntu-latest
-    needs: build-and-register-docker
-    if: github.event_name != 'pull_request'
-    permissions:
-      contents: read
-      packages: write
+    needs: dockerhub
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.ECR_REGION }}
 
-      - name: Run comprehensive tests
-        run: mvn clean test
+      - name: Log in to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build application
-        run: mvn clean package -DskipTests
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: application-jar
-          path: target/*.jar
-          retention-days: 30
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata for GitHub Container Registry
-        id: ghcr-meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ github.repository_owner }}/${{ env.DOCKER_IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-            type=sha
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' }}
-
-      - name: Build and push to GitHub Container Registry
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ steps.ghcr-meta.outputs.tags }}
-          labels: ${{ steps.ghcr-meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Security scan with Trivy
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: ${{ env.DOCKER_HUB_REPOSITORY }}:latest
-          format: 'sarif'
-          output: 'trivy-results.sarif'
-          severity: 'CRITICAL,HIGH'
-
-      - name: Upload security scan results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        with:
-          sarif_file: 'trivy-results.sarif'
-
-      - name: CI/CD Pipeline summary
+      - name: Pull image from Docker Hub
         run: |
-          echo "✅ CI/CD Pipeline executed successfully!"
-          echo "📦 Docker Hub Image: ${{ env.DOCKER_HUB_REPOSITORY }}:latest"
-          echo "📦 GitHub Container Registry: ghcr.io/${{ github.repository_owner }}/${{ env.DOCKER_IMAGE_NAME }}:latest"
-          echo "🔒 Security scan completed"
-          echo "📊 Build artifacts uploaded"
+          docker pull ${{ env.DOCKER_HUB_REPOSITORY }}:latest
+
+      - name: Tag image for ECR
+        run: |
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
+          docker tag ${{ env.DOCKER_HUB_REPOSITORY }}:latest $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest
+
+      - name: Push image to ECR
+        run: |
+          ECR_REGISTRY=${{ steps.login-ecr.outputs.registry }}
+          docker push $ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:latest
