--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,12 @@ spring.sql.init.mode=always
 # Optional logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# =========================
+# Spring AI - OpenAI
+# Create API Key in OPENAI account
+# Using Bash Command for Copy OPENAI Key: export OPENAI_API_KEY="sk-..."
+# =========================
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.chat.options.model=gpt-4o-mini
+spring.ai.openai.chat.options.temperature=0.4
