--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
+# Optional: add a global label so it's easy to filter
+management.metrics.tags.application=post-comments-app
