--- a/monitoring/docker-compose.observability.yml
+++ b/monitoring/docker-compose.observability.yml
@@ -1,6 +1,11 @@
 version: "3.8"
 
 services:
+  post-comments-app:
+    # ...
+    volumes:
+      - app_logs:/app/logs
+
   loki:
     image: grafana/loki:2.9.0
     container_name: loki
@@ -13,7 +18,7 @@ services:
     container_name: promtail
     volumes:
       - ../logs:/var/log/apps        # your app log folder
-      - ./promtail-config.yml:/etc/promtail/config.yml
+      - ./promtail-config.yml:/etc/promtail/config.yml:ro
     command: [ "-config.file=/etc/promtail/config.yml" ]
     depends_on:
       - loki
@@ -37,3 +42,6 @@ services:
     depends_on:
       - loki
       - prometheus
+
+volumes:
+  app_logs:
