Fix PostControllerTest and MainTest Classes

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,6 +9,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # Disable data initialization for tests
 spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=false
+
+# Provide dummy API key for tests to allow auto-configuration to initialize
+# The actual ChatClient will be mocked by TestAiConfig
+spring.ai.openai.api-key=dummy-key-for-testing-only
