--- a/src/main/resources/application-remote.properties
+++ b/src/main/resources/application-remote.properties
@@ -1,7 +1,7 @@
 # =========================
 # Spring Application Configuration
 # =========================
-spring.application.name=post-comments-app
+spring.application.name=postEntity-comments-app
 # Server Configuration
 server.port=8081
 
@@ -52,4 +52,4 @@ logging.level.org.hibernate=WARN
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 management.endpoints.web.exposure.include=health,info,metrics,prometheus
 # Optional: add a global label so it's easy to filter
-management.metrics.tags.application=post-comments-app
+management.metrics.tagEntities.application=postEntity-comments-app
